# Gemma_NGO

./: .env.example  .gitignore  README.md  SUPER_MESSY_NGO_DONORS.csv  architecture_audit.md.resolved  generate_messy_data.py  import_trace.txt  inference.py  kaggle_writeup.md.resolved  models.py  openenv.yaml  pyproject.toml  requirements.txt  research_notes.md.resolved  test_pipeline.py  video_script.md.resolved  walkthrough.md.resolved
public/: app.js  dashboard.html  demo_app.py  impact.html  index.html  landing.css  style.css
server/: agent.py  app.py  data_generator.py  environment.py  graders.py
